--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <meta property="og:type" content="website">
 <meta property="og:description" content>
 <meta name=twitter:title content="Gabriela">
-<link rel=canonical href=http://example.org/>
+<link rel=canonical href=/>
 <link rel=apple-touch-icon sizes=180x180 href=/favicon/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=/favicon/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=/favicon/favicon-16x16.png>
 <link rel=manifest href=/favicon/site.webmanifest>
-<link rel=stylesheet href=http://example.org/styles.0659d784b2b8a0ee1d2d4b1578d443e712723087bfb2235b7648647f1fff0b7e.css>
+<link rel=stylesheet href=/styles.0659d784b2b8a0ee1d2d4b1578d443e712723087bfb2235b7648647f1fff0b7e.css>
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
 <link rel=preload href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" as=style onload="this.onload=null,this.rel='stylesheet'">
