deploy: 504187cb15c33aa64b319292d8c9767934023212

--- a/404.html
+++ b/404.html
@@ -27,8 +27,6 @@
 <noscript><link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap"></noscript>
 <link rel=preload href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" as=style onload="this.onload=null,this.rel='stylesheet'">
 <noscript><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap"></noscript>
-<link rel=preload href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin=anonymous as=style onload="this.onload=null,this.rel='stylesheet'">
-<noscript><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css></noscript>
 </head>
 <body>
 <div class=outer>
@@ -47,14 +45,14 @@
 </main>
 <footer>
 <ul>
-<li><a href=mailto:gabrielaiwama@gmail.com title=E-Mail><i class="fas fa-envelope"></i></a></li>
-<li><a href title=GitHub><i class="fab fa-github"></i></a></li>
-<li><a href title="Google Scholar"><i class="fas fa-graduation-cap"></i></a></li>
+<li><a href=mailto:map[class:fas%20fa-envelope%20name:E-Mail%20url:mailto:gabriela.iwama@student.uni-tuebingen.de%20weight:1] title=E-Mail><i class="fas fa-envelope"></i></a></li>
+<li><a href=#ZgotmplZ title=GitHub><i class="fab fa-github"></i></a></li>
+<li><a href=#ZgotmplZ title="Google Scholar"><i class="fas fa-graduation-cap"></i></a></li>
 <li><a href title=GitHub><i class="fab fa-instagram"></i></a></li>
 <li><a href title=Institution><i class="fas fa-university"></i></a></li>
-<li><a href title=ORCID><i class="fab fa-orcid"></i></a></li>
+<li><a href=#ZgotmplZ title=ORCID><i class="fab fa-orcid"></i></a></li>
 <li><a href title=Skype><i class="fab fa-skype"></i></a></li>
-<li><a href title=Twitter><i class="fab fa-twitter"></i></a></li>
+<li><a href=#ZgotmplZ title=Twitter><i class="fab fa-twitter"></i></a></li>
 </ul>
 Made by Gabriela Iwama with <a href=https://github.com/timothygebhard/barks>barks</a>.
 </footer>
