deploy: aa492506c67003ff21411bb935ce4333a90df72b

--- a/404.html
+++ b/404.html
@@ -45,14 +45,14 @@
 </main>
 <footer>
 <ul>
-<li><a href=mailto:map[class:fas%20fa-envelope%20name:E-Mail%20url:mailto:gabriela.iwama@student.uni-tuebingen.de%20weight:1] title=E-Mail><i class="fas fa-envelope"></i></a></li>
-<li><a href=#ZgotmplZ title=GitHub><i class="fab fa-github"></i></a></li>
-<li><a href=#ZgotmplZ title="Google Scholar"><i class="fas fa-graduation-cap"></i></a></li>
+<li><a href=mailto:map[email:gabrielaiwama@gmail.com%20github:gabrielaiwama%20scholar:n6yTMLYAAAAJ%20twitter:gabrielaiwama] title=E-Mail><i class="fas fa-envelope"></i></a></li>
+<li><a href title=GitHub><i class="fab fa-github"></i></a></li>
+<li><a href title="Google Scholar"><i class="fas fa-graduation-cap"></i></a></li>
 <li><a href title=GitHub><i class="fab fa-instagram"></i></a></li>
 <li><a href title=Institution><i class="fas fa-university"></i></a></li>
-<li><a href=#ZgotmplZ title=ORCID><i class="fab fa-orcid"></i></a></li>
+<li><a href title=ORCID><i class="fab fa-orcid"></i></a></li>
 <li><a href title=Skype><i class="fab fa-skype"></i></a></li>
-<li><a href=#ZgotmplZ title=Twitter><i class="fab fa-twitter"></i></a></li>
+<li><a href title=Twitter><i class="fab fa-twitter"></i></a></li>
 </ul>
 Made by Gabriela Iwama with <a href=https://github.com/timothygebhard/barks>barks</a>.
 </footer>
