--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 <noscript><link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap"></noscript>
 <link rel=preload href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" as=style onload="this.onload=null,this.rel='stylesheet'">
 <noscript><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap"></noscript>
+<link rel=preload href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin=anonymous as=style onload="this.onload=null,this.rel='stylesheet'">
+<noscript><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css></noscript>
 </head>
 <body>
 <div class=outer>
