deploy: 95629abc58d43f012f06be259d9816c48e98ebf7

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 <div class=landing-page-wrapper>
 <div class=landing-page-content>
 <div>
-<p>Hi, I am Gabriela! I am a master student of Neural & Behavioral Sciences at the University of Tübingen. I want to understand why people have irrational beliefs. To answer that, I am investigating mechanisms in decision-making, belief updating, and information seeking. I am currently working at Randolph Helfrich&rsquo;s lab.</p>
+<p>Hi, I am Gabriela! I am a master student of Neural & Behavioral Sciences at the [b]University of Tübingen[/b]. I want to understand why people have irrational beliefs. To answer that, I am investigating mechanisms in decision-making, belief updating, and information seeking. I am currently working at Randolph Helfrich&rsquo;s lab.</p>
 </div>
 </div>
 <div class=landing-page-image>
-<img src=gabi.jpg alt width=221 height=331>
+<img src=gabi.png alt width=221 height=331>
 </div>
 </div>
 </main>
@@ -61,7 +61,7 @@
 <li><a href=mailto:gabriela.iwama@student.uni-tuebingen.de title=E-Mail><i class="fas fa-envelope"></i></a></li>
 <li><a href=https://github.com/gabrielaiwama title=GitHub><i class="fab fa-github"></i></a></li>
 <li><a href="https://scholar.google.com/citations?user=n6yTMLYAAAAJ" title="Google Scholar"><i class="ai ai-google-scholar-square"></i></a></li>
-<li><a href=https://twitter.com/GabrielaIwama title=Twitter><i class="fas fa-twitter-square"></i></a></li>
+<li><a href=https://twitter.com/GabrielaIwama title=Twitter><i class="fab fa-twitter-square"></i></a></li>
 <li><a href=https://orcid.org/0000-0002-4043-1230 title=ORCID><i class="fab fa-orcid"></i></a></li>
 <li><a href=https://www.linkedin.com/in/gabrielaiwama/ title=Linkedin><i class="fab fa-linkedin"></i></a></li>
 </ul>
