--- a/404.html
+++ b/404.html
@@ -53,10 +53,10 @@
 <ul>
 <li><a href=mailto:gabriela.iwama@student.uni-tuebingen.de title=E-Mail><i class="fas fa-envelope"></i></a></li>
 <li><a href=https://github.com/gabrielaiwama title=GitHub><i class="fab fa-github"></i></a></li>
-<li><a href="https://scholar.google.com/citations?user=n6yTMLYAAAAJ" title="Google Scholar"><i class="ai ai-google-scholar-square"></i></a></li>
-<li><a href=https://twitter.com/GabrielaIwama title=Twitter><i class="fas fa-twitter-square"></i></a></li>
+<li><a href=https://twitter.com/GabrielaIwama title=Twitter><i class="fab fa-twitter-square"></i></a></li>
 <li><a href=https://orcid.org/0000-0002-4043-1230 title=ORCID><i class="fab fa-orcid"></i></a></li>
 <li><a href=https://www.linkedin.com/in/gabrielaiwama/ title=Linkedin><i class="fab fa-linkedin"></i></a></li>
+<li><a href="https://scholar.google.com/citations?user=n6yTMLYAAAAJ" title="Google Scholar"><i class="ai ai-google-scholar-square"></i></a></li>
 </ul>
 Made by Gabriela Iwama with <a href=https://github.com/timothygebhard/barks>barks</a>.
 </footer>
