deploy: fdaeff68a3304f1a34e6b35a76ddc3e0c444fe6a

--- a/404.html
+++ b/404.html
@@ -10,11 +10,11 @@
 <meta name=theme-color content="#333333">
 <meta name=author content>
 <meta name=description content>
-<title>Gabriela&nbsp;•&nbsp;404 Page not found</title>
-<meta property="og:title" content="Gabriela">
+<title>Gabriela Iwama&nbsp;•&nbsp;404 Page not found</title>
+<meta property="og:title" content="Gabriela Iwama">
 <meta property="og:type" content="website">
 <meta property="og:description" content>
-<meta name=twitter:title content="Gabriela">
+<meta name=twitter:title content="Gabriela Iwama">
 <link rel=canonical href=/404.html>
 <link rel=apple-touch-icon sizes=180x180 href=/favicon/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=/favicon/favicon-32x32.png>
@@ -37,7 +37,7 @@
 <div class=middle>
 <div class=inner>
 <header>
-<a href=/ class=title>Gabriela</a>
+<a href=/ class=title>Gabriela Iwama</a>
 </header>
 <nav>
 <ul>
@@ -53,10 +53,10 @@
 <ul>
 <li><a href=mailto:gabriela.iwama@student.uni-tuebingen.de title=E-Mail><i class="fas fa-envelope"></i></a></li>
 <li><a href=https://github.com/gabrielaiwama title=GitHub><i class="fab fa-github"></i></a></li>
+<li><a href="https://scholar.google.com/citations?user=n6yTMLYAAAAJ" title="Google Scholar"><i class="ai ai-google-scholar-square"></i></a></li>
 <li><a href=https://twitter.com/GabrielaIwama title=Twitter><i class="fab fa-twitter-square"></i></a></li>
 <li><a href=https://orcid.org/0000-0002-4043-1230 title=ORCID><i class="fab fa-orcid"></i></a></li>
 <li><a href=https://www.linkedin.com/in/gabrielaiwama/ title=Linkedin><i class="fab fa-linkedin"></i></a></li>
-<li><a href="https://scholar.google.com/citations?user=n6yTMLYAAAAJ" title="Google Scholar"><i class="ai ai-google-scholar-square"></i></a></li>
 </ul>
 Made by Gabriela Iwama with <a href=https://github.com/timothygebhard/barks>barks</a>.
 </footer>
