--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <meta name=theme-color content="#333333">
 <meta name=author content>
 <meta name=description content>
-<title>Gabriela&nbsp;•&nbsp;Home</title>
-<meta property="og:title" content="Gabriela">
+<title>Gabriela Iwama&nbsp;•&nbsp;Home</title>
+<meta property="og:title" content="Gabriela Iwama">
 <meta property="og:type" content="website">
 <meta property="og:description" content>
-<meta name=twitter:title content="Gabriela">
+<meta name=twitter:title content="Gabriela Iwama">
 <link rel=canonical href=/>
 <link rel=apple-touch-icon sizes=180x180 href=/favicon/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=/favicon/favicon-32x32.png>
@@ -37,7 +37,7 @@
 <div class=middle>
 <div class=inner>
 <header>
-<a href=/ class=title>Gabriela</a>
+<a href=/ class=title>Gabriela Iwama</a>
 </header>
 <nav>
 <ul>
@@ -48,7 +48,7 @@
 <div class=landing-page-wrapper>
 <div class=landing-page-content>
 <div>
-<p>Hi, I am Gabriela! I am a master student of Neural & Behavioral Sciences at the [b]University of Tübingen[/b]. I want to understand why people have irrational beliefs. To answer that, I am investigating mechanisms in decision-making, belief updating, and information seeking. I am currently working at Randolph Helfrich&rsquo;s lab.</p>
+<p>Hi, I am Gabriela! I am a master student of Neural & Behavioral Sciences at the <b>University of Tübingen</b>. I want to understand why people have irrational beliefs. To answer that, I am investigating mechanisms in decision-making, belief updating, and information seeking. I am currently working at Randolph Helfrich&rsquo;s lab.</p>
 </div>
 </div>
 <div class=landing-page-image>
