--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
 </header>
 <nav>
 <ul>
-<li><strong><a href=/blog>blog</a></strong></li>
+<li><strong><a href=/posts>blog</a></strong></li>
 </ul>
 </nav>
 <main>
