deploy: 06b262072d017ca54f851604939cb40d6c05b5a7

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <li><a href=mailto:gabriela.iwama@student.uni-tuebingen.de title=E-Mail><i class="fas fa-envelope"></i></a></li>
 <li><a href=https://github.com/gabrielaiwama title=GitHub><i class="fab fa-github"></i></a></li>
 <li><a href="https://scholar.google.com/citations?user=n6yTMLYAAAAJ" title="Google Scholar"><i class="ai ai-google-scholar-square"></i></a></li>
+<li><a href=https://www.researchgate.net/profile/Gabriela-Iwama title=ResearchGate><i class="fab fa-researchgate"></i></a></li>
 <li><a href=https://twitter.com/GabrielaIwama title=Twitter><i class="fab fa-twitter-square"></i></a></li>
 <li><a href=https://orcid.org/0000-0002-4043-1230 title=ORCID><i class="fab fa-orcid"></i></a></li>
 <li><a href=https://www.linkedin.com/in/gabrielaiwama/ title=Linkedin><i class="fab fa-linkedin"></i></a></li>
