deploy: bc332782c2f05823ec2a188a94f3db3cfcfd641c

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div class=landing-page-wrapper>
 <div class=landing-page-content>
 <div>
-<p>Hi, I am Gabriela! I am a master student of Neural & Behavioral Sciences at the <a href=https://www.neuroschool-tuebingen.de/>University of Tübingen</a>. I want to understand why people have irrational beliefs. To answer that, I am investigating mechanisms in decision-making, belief updating, and information seeking. I am currently working at Randolph Helfrich&rsquo;s lab.</p>
+<p>Hi, I am Gabriela! I am a master student of Neural & Behavioral Sciences at the <a href=https://www.neuroschool-tuebingen.de/>University of Tübingen</a>. I want to understand why people have irrational beliefs. To answer that, I am investigating the computational, algorithmic and neural mechanisms in decision-making, belief updating, and information seeking. I am currently working at Randolph Helfrich&rsquo;s lab.</p>
 </div>
 </div>
 <div class=landing-page-image>
