--- a/404.html
+++ b/404.html
@@ -41,6 +41,7 @@
 </header>
 <nav>
 <ul>
+<li><strong><a href=/publications>publications</a></strong></li>
 <li><strong><a href=/posts>blog</a></strong></li>
 </ul>
 </nav>
@@ -53,7 +54,7 @@
 <ul>
 <li><a href=mailto:gabriela.iwama@student.uni-tuebingen.de title=E-Mail><i class="fas fa-envelope"></i></a></li>
 <li><a href=https://github.com/gabrielaiwama title=GitHub><i class="fab fa-github"></i></a></li>
-<li><a href="https://scholar.google.com/citations?user=n6yTMLYAAAAJ" title="Google Scholar"><i class="ai ai-google-scholar-square"></i></a></li>
+<li><a href="https://scholar.google.com/citations?user=n6yTMLYAAAAJ" title="Google Scholar"><i class="fab fa-google"></i></a></li>
 <li><a href=https://www.researchgate.net/profile/Gabriela-Iwama title=ResearchGate><i class="fab fa-researchgate"></i></a></li>
 <li><a href=https://twitter.com/GabrielaIwama title=Twitter><i class="fab fa-twitter-square"></i></a></li>
 <li><a href=https://orcid.org/0000-0002-4043-1230 title=ORCID><i class="fab fa-orcid"></i></a></li>
