deploy: 4fda65a127f9440d01a8e646f7378b9e84ece310

--- a/publications/index.html
+++ b/publications/index.html
@@ -47,16 +47,28 @@
 </nav>
 <main>
 <h1></h1>
-<h2 id=2024>2024</h2>
-<h2 id=2023>2023</h2>
+<h2 id=neuroscience>Neuroscience</h2>
+<p><strong>Iwama, G.</strong>, Helfrich, R. (preprint). Sensory and action neural tuning explains how priors guide human visual decisions.</p>
+<p>Weber, J., <strong>Iwama, G.</strong>, Solbakk, A., Blenkmann, A., Larsson, P., Ivanovic, J., Knight, R., Endestad, T., & Helfrich, R. (2023). <a href=https://www.pnas.org/doi/10.1073/pnas.2220523120>Subspace partitioning in the human prefrontal cortex resolves cognitive interference</a>. PNAS.</p>
+<h2 id=cognitive-science>Cognitive Science</h2>
+<p>Callaway, F., Jain, Y., Opheusden, B., Das, P., <strong>Iwama, G.</strong>, Gul, S., Krueger, P., Becker, F., Griffiths, T., Lieder, F. (2022). Leveraging Artificial Intelligence to Improve People’s Planning Strategies. PNAS.</p>
+<p>Lieder, F., & <strong>Iwama, G.</strong> (2021). Toward a formal theory of proactivity. Cognitive, Affective, & Behavioral Neuroscience.</p>
+<h2 id=psychometric>Psychometric</h2>
+<p>Correa, W., <strong>Iwama, G.</strong>, Gomes, M., Pedrosa, G., Silva, W., & Figueiredo, R. (2022). Evaluating the Impact of Trust in Government on Satisfaction with Public Services. International Conference on Electronic Government. Linköping, Sweden.</p>
+<p>Franco, V., & <strong>Iwama, G.</strong> (2021). Confirmatory Factor Analysis with R [translated title]. In C. Faiad, M. Baptista & R. Primi (Orgs.). Psychometrics Data Analysis Tutorial (pp. 77-106). São Paulo, SP: Vozes.</p>
+<p>Pedrosa, G., Kosloski, R., Menezes, V., <strong>Iwama, G.</strong>, Silva, W., & Figueiredo, R. (2020). A systematic review of indicators for evaluating the effectiveness of digital public services. Information, 11(10), 472.</p>
+<p>Soares, V., <strong>Iwama, G.</strong>, Menezes V., Gomes M., Pedrosa G., Silva, W., & Figueiredo, R. (2019). Evaluating Government Services Based on User Perspective. 20th Annual International Conference on Digital Government Research, 425-432. DOI: 10.1145/3325112.3325224.</p>
+<h2 id=staff-sizing>Staff Sizing</h2>
+<p>Damasceno, R., <strong>Iwama, G.</strong> & Franco, V., & Kosloski, R. (2018). Productivity and its measurement [translated title]. In A. Serrano, G. <strong>Iwama, J</strong>. Almeida, R. Damasceno & V. Franco (Orgs.). Staff sizing in federal public administration: Production capacity measurement and context analysis (pp. 29-46). Brasília, DF: ENAP.</p>
+<p>Damasceno, R., <strong>Iwama, G.</strong>, Guarnieri, P., & Franco, V. (2018). What is workforce planning? [translated title]. In A. Serrano, V. Franco, R. Damasceno, G. <strong>Iwama, & P</strong>. Guarnieri (Orgs.). Staff sizing in federal public administration: A tool of workforce planning (pp. 31-53). Brasília, DF: ENAP.</p>
 </main>
 <footer>
 <ul>
-<li><a href=mailto:gabriela.iwama@student.uni-tuebingen.de title=E-Mail><i class="fas fa-envelope"></i></a></li>
+<li><a href=mailto:gabriela.iwama@uni-tuebingen.de title=E-Mail><i class="fas fa-envelope"></i></a></li>
 <li><a href=https://github.com/gabrielaiwama title=GitHub><i class="fab fa-github"></i></a></li>
 <li><a href="https://scholar.google.com/citations?user=n6yTMLYAAAAJ" title="Google Scholar"><i class="fab fa-google"></i></a></li>
 <li><a href=https://www.researchgate.net/profile/Gabriela-Iwama title=ResearchGate><i class="fab fa-researchgate"></i></a></li>
-<li><a href=https://twitter.com/GabrielaIwama title=Twitter><i class="fab fa-twitter-square"></i></a></li>
+<li><a href=https://bsky.app/profile/gabrielaiwama.bsky.social title=Twitter><i class="fab fa-bluesky"></i></a></li>
 <li><a href=https://orcid.org/0000-0002-4043-1230 title=ORCID><i class="fab fa-orcid"></i></a></li>
 <li><a href=https://www.linkedin.com/in/gabrielaiwama/ title=Linkedin><i class="fab fa-linkedin"></i></a></li>
 </ul>
