--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 <div>
 <p>Hi, I am Gabriela! I am a PhD student of Neural Information Procesing at the <a href=https://www.neuroschool-tuebingen.de/>University of Tübingen</a>.
 As a long-term goal, I want to understand why people have irrational beliefs.
-To answer that, I am investigating the neural mechanisms underlying prior integration, belief updating, and information-seeking.
-I am currently working at <a href=https://helfrich-lab.com/>Randolph Helfrich&rsquo;s lab</a> at the <a href=https://www.hih-tuebingen.de/en/>Hertie Institute for Clinical Brain Research</a>.
+To answer that, I am investigating the neural mechanisms underlying <strong>prior integration</strong>, <strong>belief updating</strong>, and <strong>information-seeking</strong>.<br>
+I am currently working at <a href=https://helfrich-lab.com/>Randolph Helfrich&rsquo;s lab</a> at the <a href=https://www.hih-tuebingen.de/en/>Hertie Institute for Clinical Brain Research</a>.<br>
 Besides science, I love watercolor painting, digital illustration, and science fiction.</p>
 </div>
 </div>
@@ -67,7 +67,7 @@ Besides science, I love watercolor painting, digital illustration, and science f
 <li><a href=https://github.com/gabrielaiwama title=GitHub><i class="fab fa-github"></i></a></li>
 <li><a href="https://scholar.google.com/citations?user=n6yTMLYAAAAJ" title="Google Scholar"><i class="fab fa-google"></i></a></li>
 <li><a href=https://www.researchgate.net/profile/Gabriela-Iwama title=ResearchGate><i class="fab fa-researchgate"></i></a></li>
-<li><a href=https://bsky.app/profile/gabrielaiwama.bsky.social title=Twitter><i class="fab fa-bluesky"></i></a></li>
+<li><a href=https://bsky.app/profile/gabrielaiwama.bsky.social title=bluesky><i class="fas fa-bluesky"></i></a></li>
 <li><a href=https://orcid.org/0000-0002-4043-1230 title=ORCID><i class="fab fa-orcid"></i></a></li>
 <li><a href=https://www.linkedin.com/in/gabrielaiwama/ title=Linkedin><i class="fab fa-linkedin"></i></a></li>
 </ul>
