deploy: 23b61e3aad13a7536fcb0d1e7e3aa26bddfdf110

--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
 <div>
 <p>Hi, I am Gabriela! I am a PhD student of Neural Information Procesing at the <a href=https://www.neuroschool-tuebingen.de/>University of Tübingen</a>.
 As a long-term goal, I want to understand why people have irrational beliefs.
-To answer that, I am investigating the neural mechanisms underlying <strong>prior integration</strong>, <strong>belief updating</strong>, and <strong>information-seeking</strong>.
-\I am currently working at <a href=https://helfrich-lab.com/>Randolph Helfrich&rsquo;s lab</a> at the <a href=https://www.hih-tuebingen.de/en/>Hertie Institute for Clinical Brain Research</a>.<br>
-\Besides science, I love watercolor painting, digital illustration, and science fiction.</p>
+To answer that, I am investigating the neural mechanisms underlying <strong>prior integration</strong>, <strong>belief updating</strong>, and <strong>information-seeking</strong>.<br>
+I am currently working at <a href=https://helfrich-lab.com/>Randolph Helfrich&rsquo;s lab</a> at the <a href=https://www.hih-tuebingen.de/en/>Hertie Institute for Clinical Brain Research</a>.
+<br><br>
+Besides science, I love watercolor painting, digital illustration, and science fiction.</p>
 </div>
 </div>
 <div class=landing-page-image>
