deploy: fc2e9fef818469689e47bd44cb19f20518f48e53

--- a/publications/index.html
+++ b/publications/index.html
@@ -48,7 +48,7 @@
 <main>
 <h1></h1>
 <h2 id=neuroscience>Neuroscience</h2>
-<p><strong>Iwama, G.</strong>, Helfrich, R. (preprint). Sensory and action neural tuning explains how priors guide human visual decisions.</p>
+<p><strong>Iwama, G.</strong>, Helfrich, R. (preprint). <a href=https://www.biorxiv.org/content/10.1101/2025.03.26.645167v1.full>Sensory and action neural tuning explains how priors guide human visual decisions</a>. bioRxiv.</p>
 <p>Weber, J., <strong>Iwama, G.</strong>, Solbakk, A., Blenkmann, A., Larsson, P., Ivanovic, J., Knight, R., Endestad, T., & Helfrich, R. (2023). <a href=https://www.pnas.org/doi/10.1073/pnas.2220523120>Subspace partitioning in the human prefrontal cortex resolves cognitive interference</a>. PNAS.</p>
 <h2 id=cognitive-science>Cognitive Science</h2>
 <p>Callaway, F., Jain, Y., Opheusden, B., Das, P., <strong>Iwama, G.</strong>, Gul, S., Krueger, P., Becker, F., Griffiths, T., Lieder, F. (2022). <a href=https://www.pnas.org/doi/10.1073/pnas.2117432119>Leveraging Artificial Intelligence to Improve People’s Planning Strategies</a>. PNAS.</p>
